--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,6 @@ body {
   border-color: #4f0abe;
 }
 .btn-alt:hover {
-  background-color: rgb(230, 201, 252);
+  background-color: #e6c9fc;
   border-color: transparent;
 }
