validasi user input dengan javascript

--- a/styles/configuration.css
+++ b/styles/configuration.css
@@ -18,6 +18,14 @@
   width: 15rem;
   padding: 0.35rem;
 }
+.error label {
+  color: #880202;
+}
+.error input {
+  border-color: #880202;
+  color: #880202;
+  background-color: #fddbdb;
+}
 #game-configuration {
   width: 90%;
   max-width: 40rem;
